--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
+    "test:rss": "ts-node src/scripts/testRSSCollector.ts",
     "lint": "eslint src --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "seed:sources": "ts-node src/scripts/seedSources.ts"
   },
   "keywords": [
     "express",
@@ -19,31 +21,32 @@
   "author": "Kuriyama301",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "mongoose": "^8.0.3",
-    "pg": "^8.11.3",
-    "redis": "^4.6.11",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "morgan": "^1.10.0"
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3",
+    "redis": "^4.6.11",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.6",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "typescript": "^5.3.3"
   }
 }
